--- a/SVNproject/trunk/code/index.html
+++ b/SVNproject/trunk/code/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/common.css">
         <link rel="stylesheet" href="../css/index.css">
+        <!-- 轮播样式 -->
+        <link rel="stylesheet" href="../css/slider.css">
     </head>
         <body>
             <!---------------------------1.顶部 --------------------------->
@@ -26,7 +28,7 @@
                 <div class="search-shopcart-order clearfix"> 
                     <!-- 购物车&订单 -->
                     <div class="shopcart-order fr">
-                        <button><span>1</span><span>购物车</span><span>3</span></button>
+                        <button><span></span><span>购物车</span><span></span></button>
                         <button>我的订单</button>
                     </div>
                     <!-- 搜索框 -->
@@ -36,27 +38,212 @@
                     </div>
                 </div>
                 <!-- 分类导航 -->
-                <div class="category-menu">
+                <div class="category-menu clearfix">
                     <!-- 左侧 -->
-                    <div class="left-logo fr"></div>
-                    <ul>
-                        <li>图书1</li>
-                        <li>图书2</li>
-                        <li>图书3</li>
-                        <li>图书4</li>
-                        <li>图书5</li>
-                        <li>图书6</li>
-                        <li>图书7</li>
-                        <li>图书8</li>
-                        <li>图书9</li>
-                        <li>图书10</li>
-                        <li>图书11</li>
+                    <div class="left-logo fl">
+                        <img src="../img/logo.jpg">
+                    </div>                  
+                    <!-- 右侧 -->
+                    <ul class="fr clearfix">
+                        <li>图书</li>
+                        <li>电子书</li>
+                        <li>原创文学</li>
+                        <li>服装</li>
+                        <li>运动户外</li>
+                        <li>孕嘤童</li>
+                        <li>家居</li>
+                        <li>创业文具</li>
+                        <li>地方特产</li>
+                        <li>海外购</li>
+                        <li>电器城</li>
                     </ul>
                      </div>
             </div>
 
             <!--------------------------- 3.分类导航和banner --------------------------->
-            <div class="menu container"></div>
+            <div class="menu container clearfix">
+                <!-- 左侧导航 -->
+                <div class="sideMenu fl">
+                    <ul>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">图书</a>、<a href="#">电子书</a>、<a href="#">童书</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">创意文具</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单2
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">服饰</a>、<a href="#">内衣</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单3
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">鞋子</a>、<a href="#">箱包</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">运动户外</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">孕</a>、<a href="#">嘤</a>、<a href="#">童</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">家居</a>、<a href="#">家纺</a>、<a href="#">汽车</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">家具</a>、<a href="#">家装</a>、<a href="#">康体</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">美妆</a>、<a href="#">个人护理</a>、<a href="#">成人</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">食品</a>、<a href="#">茶酒</a>、<a href="#">生鲜</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">腕表</a>、<a href="#">珠宝</a>、<a href="#">眼睛</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">手机</a>、<a href="#">数码</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">电脑办公</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                        <li>
+                            <!-- 一级导航标题 -->
+                            <p class="title">
+                              <a href="#">家用电器</a>
+                            </p>
+                            <!-- 二级导航 -->
+                            <div class="subMenu">
+                                子菜单1
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 右侧banner -->
+                <div class="banner fr">
+                    <!-- 轮播容器 -->
+                    <!--轮播开始-->
+		<div class="pptbox" id="bannerInner">
+			<!--轮播的内容-->
+			<ul class="innerwrapper">
+				<li>
+					<a href="#"><img src="../img/banner1.jpg" /></a>
+				</li>
+				<li>
+					<a href="#"><img src="../img/banner2.jpg" /></a>
+				</li>
+				<li>
+					<a href="#"><img src="../img/banner3.jpg" /></a>
+				</li>
+				<li>
+					<a href="#"><img src="../img/banner4.jpg" /></a>
+				</li>
+				<li>
+					<a href="#"><img src="../img/banner5.jpg" /></a>
+				</li>
+			</ul>
+			<!--数字控制器-->
+			<ul class="controls">
+				<li class="current">1</li>
+				<li>2</li>
+				<li>3</li>
+				<li>4</li>
+				<li>5</li>
+			</ul>
+			<!--按钮控制器-->
+			<span class="btnleft"></span>
+			<span class="btnright"></span>
+		</div>
+                </div>
+            </div>
 
             <!-- 4.今日推荐 -->
             <div class="recommend container"></div>
@@ -89,7 +276,13 @@
             <div class="home-appliances center container"></div>
 
             <!-- 尾部 -->
-            <div class="tail container></div>
+            <div class="tail container"></div>
 
+            <!--引入jquery -->
+            <script src="../js/jquery-1.11.0.js"></script>
+            <!-- 引入轮播插件 -->
+            <script src="../js/slider.js"></script>
+            <!-- 引入自己写的js -->
+            <script src="../js/index.js"></script>
         </body>
 </html>
