第十二次作业

--- a/SVNproject/trunk/code/productDetail.html
+++ b/SVNproject/trunk/code/productDetail.html
@@ -16,6 +16,9 @@
         <body>
             <!---------------------------1.顶部 --------------------------->
             <div class="topbar">
+                <div class="label">
+                    <p><a href="../code/index.html">返回首页</a></p>
+                </div>
                 <div class="container clearfix">
                     <p class="fl"><a href="#">www.legou.com</a></p>
                     <p class="fr"><span>欢迎光临<a href="#">乐购</a></span>，<span>请<a href="login.html" class="login">登录</a>\<a href="#">注册</a></span></p>
