--- a/SVNproject/trunk/code/弹出蒙层.html
+++ b/SVNproject/trunk/code/弹出蒙层.html
@@ -9,7 +9,7 @@
         <!-- 引入样式 -->
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/common.css">
-        <link rel="stylesheet" href="../css/shopcart.css">
+        <link rel="stylesheet" href="../css/model.css">
     </head>
         <body>
             <!---------------------------1.顶部 --------------------------->
@@ -61,62 +61,10 @@
                      </div>
             </div>
 
-           <!--------------------------- 购物车 --------------------------->
-           <div class="shopcart container">
-               <!-- 全部商品 -->
-               <h2>全部商品 (<i class="goodsCount">2</i> )</h2>
-               <!-- 表格 -->
-               <table>
-                   <thead>
-                       <tr>
-                           <th><input type="checkbox">全选</th>
-                           <th>商品</th>
-                           <th>单价</th>
-                           <th>数量</th>
-                           <th>小计</th>
-                           <th>操作</th>
-                       </tr>
-                   </thead>
-                   <tbody>
-                       <tr>
-                           <td><input type="checkbox"></td>
-                           <td>
-                               <img src="../img/index08_05.jpg" alt=""> 不愿意放弃你的全部                    
-                           </td>
-                           <td class="price">41.00</td>
-                           <td>
-                               <button class="add">＋</button>
-                               <input type="text" value="1">
-                               <button class="reduce">－</button>
-                           </td>
-                           <td class="subprice">41.00</td>
-                           <td class="del">删除</td>
-                       </tr>
-                      
-                       <tr>
-                        <td><input type="checkbox"></td>
-                        <td>
-                            <img src="../img/index08_05.jpg" alt=""> 不愿意放弃你的全部
-                        </td>
-                        <td class="price">21.00</td>
-                        <td>
-                            <button class="add">＋</button>
-                            <input type="text" value="1">
-                            <button class="reduce">－</button>
-                        </td>
-                        <td class="subprice">21.00</td>
-                        <td class="del">删除</td>
-                    </tr>
-                   </tbody>
-               </table>
-               <div class="totalPrice">
-                   <input type="checkbox">全选  
-                   <span class="deleteChecked">删除选中商品</span>  
-                   <button class="fr">去结算</button>
-                   <span class="choice fr">已选择 <i class="count">0</i> 件商品<span> 
-                   <span class="total-price fr">总价: <i class="total">0.00</i> </span>                  
-               </div>
-           </div>
+            <!-- 按钮 -->
+            <div class="container" style="height: 500px;">
+                <button id="btn">确定支付</button>
+            </div>
 
             <!--------------------------- 尾部 --------------------------->
             <div class="tail container clearfix">
@@ -197,8 +145,23 @@
             </div>
 
           
+             <!-- 蒙层 -->
+             <div class="model">
+                 <div class="content"><span id="close">x</span></div>
+             </div>
             <!--引入jquery -->
             <script src="../js/jquery-1.11.0.js"></script>
-            <script src="../js/shopcart.js"></script>
+            <script>
+                $(function(){
+                    //打开模态框
+                    $('#btn').click(function(){
+                        $('.model').fadeIn();
+                    })
+                    //关闭模态框
+                    $('#close').click(function(){
+                        $('.model').fadeOut();
+                    })
+                })
+            </script>
         </body>
 </html>
