星级评分和无限滚动

--- a/SVNproject/trunk/code/index.html
+++ b/SVNproject/trunk/code/index.html
@@ -355,7 +355,7 @@
                         <!-- 左侧广告 -->
                         <div class="ads fl">
                             <div class="top-img">
-                                <img src="../img/index7_07.jpg" alt="">
+                                <a href="productDetail.html"><img src="../img/index7_07.jpg" alt=""></a>
                             </div>
                             <div class="bottom-text">
                                 <ul>
