--- a/SVNproject/trunk/code/shopcart.html
+++ b/SVNproject/trunk/code/shopcart.html
@@ -112,7 +112,7 @@
                <div class="totalPrice">
                    <input type="checkbox">全选  
                    <span class="deleteChecked">删除选中商品</span>  
-                   <button class="fr">去结算</button>
+                   <a href="弹出蒙层.html"><button class="fr">去结算</button></a>
                    <span class="choice fr">已选择 <i class="count">0</i> 件商品<span> 
                    <span class="total-price fr">总价: <i class="total">0.00</i> </span>                  
                </div>
