--- a/SVNproject/trunk/code/productDetail.html
+++ b/SVNproject/trunk/code/productDetail.html
@@ -145,7 +145,7 @@
                                 <button class="add">+</button>
                                 <button class="reduce">-</button>
                             </p>
-                            <button class="shopcart">加入购物车</button>
+                            <a href="shopcart.html"><button class="shopcart">加入购物车</button></a>
                             <p class="point">温馨提示：支持七天无理由退货</p>
                         </div>
                     </div>
